# fastapi_skeleton

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
app/: backend_pre_start.py  main.py
app/controllers/: __init__.py  assistant_controller.py  auth.py  auth_controller.py  base_controller.py  city_controller.py  entities_controller.py  user_controller.py
app/core/: config.py  logger.py  notifications.py  security.py
app/database/: connection.py  redis.py
app/db/: redis.py  session.py
app/dependencies/: security.py
app/middlewares/: logging_middleware.py
app/models/: Assistants.py  Users.py  __init__.py  assistant.py  auth.py  base.py  city.py  entity.py  user.py
app/repositories/: __init__.py  base.py  user.py
app/schemas/: __init__.py  assistant.py  auth.py  city.py  entity.py  token.py  user.py
app/services/: __init__.py  telegram_service.py  user.py
app/tests/: README.md  conftest.py  test_api.py  test_city_api.py
app/types/: pagination.py
app/utils/: __init__.py  db_helpers.py  error_handlers.py  error_handling.py  pagination.py  security.py
docs/: logging.md
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 2025_04_09_0313-8b956ff7441a_initial_setup_with_database_and_.py  2025_04_11_2210-a1b2c3d4e5f6_create_user_auth_tables.py
scripts/: create_db.py  db.py  entrypoint.sh  reset_db.py  setup_db.sh  verify_migrations.py
tests/: conftest.py
(+28 files in other folders)
